--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -13,34 +13,68 @@ modules:
   - type: files
     files:
       - usr: /usr
-          # copies config/files/usr into your image's /usr.
-          # put configuration files you want in /etc/ on a booted system 
-          # in /usr/etc/ in the image. read more in files module reference.
 
   - type: rpm-ostree
-    repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-      # - micro
-      # - starship
+      - gnome-shell-extension-auto-move-windows
+      - gnome-shell-extension-just-perfection
+      - gnome-shell-extension-appindicator
     remove:
-      - firefox # default firefox removed in favor of flatpak
-      - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
+      - firefox
+      - firefox-langpacks
+      - gnome-tour
+      - gnome-classic-session
+      - gnome-shell-extension-apps-menu
+      - gnome-shell-extension-background-logo
+      - gnome-shell-extension-launch-new-instance
+      - gnome-shell-extension-places-menu
+      - gnome-shell-extension-window-list
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
     system:
-      # If no repo information is specified, Flathub will be used by default
-      # repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
-      # repo-name: flathub
-      # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
         - org.mozilla.firefox
-        # - org.gnome.Loupe
-        # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
-        # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
-        # only normal flatpak applications are (like Floorp Lightning web browser in this example).
-        # Installing different branches of the same Flatpak is not supported.
+        - org.gimp.GIMP
+        - io.mpv.Mpv
+        - com.discordapp.Discord
+        - com.mattjakeman.ExtensionManager
+        - com.obsproject.Studio
+        - com.protonvpn.www
+        - com.spotify.Client
+        - com.teamspeak.TeamSpeak
+        - com.valvesoftware.Steam
+        - im.riot.Riot
+        - io.exodus.Exodus
+        - io.freetubeapp.FreeTube
+        - io.github.achetagames.epic_asset_manager
+        - io.github.trigg.discover_overlay
+        - me.kozec.syncthingtk
+        - net.ankiweb.Anki
+        - com.github.tchx84.Flatseal
+        - org.flameshot.Flameshot
+        - org.keepassxc.KeePassXC
+        - org.libreoffice.LibreOffice
+        - org.mozilla.Thunderbird
+        - org.signal.Signal
+        - org.gnome.Loupe
+        - org.gnome.Evince
+        - org.gnome.Calculator
+        - org.gnome.Characters
+        - org.gnome.baobab
+        - org.gnome.Music
+        - org.gnome.NautilusPreviewer
       remove:
-        # - org.gnome.eog
+        - org.gnome.eog
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
+
+  - type: fonts
+    fonts:
+      nerd-fonts:
+        - JetBrainsMono
+        - DejaVuSansMono
+
+  - type: bling
+    install:
+      - dconf-update-service
